workload/system/traefik-home/home-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: home-dels-info
  namespace: default
spec:
  type: ExternalName
  externalName: 192.168.1.6
  ports:
    - name: http
      port: 80
